# flashprog

./: .gitignore  .gitreview  82802ab.c  Doxyfile  Makefile  Makefile.include  README  README.md  amd_imc.c  amd_rom3read.c  amd_spi100.c  at45db.c  atahpt.c  atapromise.c  atavia.c  bitbang_spi.c  board_enable.c  buspirate_spi.c  cbtable.c  ch341a_spi.c  ch347_spi.c  chipdrivers.h  chipset_enable.c  cli.c  cli_classic.c  cli_common.c  cli_config.c  cli_output.c  cli_wp.c  dediprog.c  developerbox_spi.c  digilent_spi.c  dirtyjtag_spi.c  dmi.c  drkaiser.c  dummyflasher.c  edi.c  en29lv640b.c  flash.h  flashchips.c  (+95 more)
Documentation/: building_meson.md  mysteries_intel.txt  serprog-protocol.txt
Makefile.d/: arch_test.h  endian_test.h  os_test.h  pci_old_get_dev_test.c
include/: bitbang_spi.h  chipdrivers.h  cli.h  ene.h  flash.h  flashchips.h  hwaccess_physmap.h  ich_descriptors.h  layout.h  libflashprog.h  programmer.h  spi.h  spi_command.h  version.h.in  writeprotect.h
include/chipdrivers/: edi.h  memory_bus.h  opaque.h  probing.h  spi.h
include/programmer/: physmap.h
include/test/: ni845x.h
libflashprog/: chips.c
platform/: meson.build  pci.h
tests/: test_invariant_fmap.c
util/: 50-flashprog.rules  flashprog_partial_write_test.sh  getversion.sh  meson.build  shell.nix  z60_flashprog.rules
util/git-hooks/: commit-msg  pre-push
util/ich_descriptors_tool/: Makefile  ich_descriptors_tool.c
util/manibuilder/: Dockerfile.almalinux  Dockerfile.alpine  Dockerfile.anita  Dockerfile.centos  Dockerfile.cross  Dockerfile.debian  Dockerfile.debian-debootstrap  (+15 more)
